# ObjectTracker

./: CMakeLists.txt  Readme.md  double_detect.cpp  main.cpp
scripts/: bag_to_images.py  detectDrones.py  generate_csv.sh
